--- a/templates/views/user.hbs
+++ b/templates/views/user.hbs
@@ -1,33 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>user Dashboard</title>
     <link href='https://fonts.googleapis.com/css?family=Outfit' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="css/user.css">
 </head>
+
 <body>
     <div class="container">
         <div class="navigation">
             <!-- <h2>Dashboard</h2> -->
             <ul>
                 <li>
+                    <a href="index.html">
+                        <span class="icon">
+                            <!-- <ion-icon name="home-outline"></ion-icon> -->
+                        </span>
+                        <span class="title">Dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" onclick="divVisibility('Div1');">
+                        <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
+                        <span class="title">User Details</span>
+                    </a>
+                    
+                </li>
+                <li>
+                    <a href="#" onclick="divVisibility('Div2');">
+                        <span class="icon"><ion-icon name="card-outline"></ion-icon></span>
+                        <span class="title">Transaction History</span>
+                    </a>
+                    
+                </li>
+                <li>
+                    <a href="#" onclick="divVisibility('Div3');">
+                        <span class="icon"><ion-icon name="chatbox-outline"></ion-icon></ion-icon></span>
+                        <span class="title">Deposit</span>
+                    </a>
+                    
+                </li>
+                <li>
+                    <a href="#" onclick="divVisibility('Div4');">
+                        <span class="icon"><ion-icon name="chatbox-outline"></ion-icon></ion-icon></span>
+                        <span class="title">Withdraw</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" onclick="divVisibility('Div5');">
+                        <span class="icon"><ion-icon name="chatbox-outline"></ion-icon></ion-icon></span>
+                        <span class="title">Transfer</span>
+                    </a>
+                </li>
+
+                <!-- <li>
                     <a href="">
                         <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="title">Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" onclick="divVisibility('Div1');">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                         <span class="title">User Details</span>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" onclick="divVisibility('Div2');">
                         <span class="icon"><ion-icon name="card-outline"></ion-icon></span>
                         <span class="title">Transaction History</span>
                     </a>
@@ -55,10 +99,24 @@
                         <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
                         <span class="title">Log out</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <div class="main">
+            <div class="main_div">
+                <div class="buttons">
+                    <!-- <a href="#" onclick="divVisibility('Div1');">Div1</a> |
+                    <a href="#" onclick="divVisibility('Div2');">Div2</a> |
+                    <a href="#" onclick="divVisibility('Div3');">Div3</a> |
+                    <a href="#" onclick="divVisibility('Div4');">Div4</a> -->
+                </div>
+                <div class="inner_div">
+                    <!-- <div id="Div1">I'm Div One</div> -->
+                    <!-- <div id="Div2" style="display: none;">I'm Div Two</div> -->
+                    <!-- <div id="Div3" style="display: none;">I'm Div Three</div> -->
+                    <!-- <div id="Div4" style="display: none;">I'm Div Four</div> -->
+                </div>
+            </div>
             <div class="topbar">
                 <div class="toggle">
                     <ion-icon name="menu-outline"></ion-icon>
@@ -76,42 +134,43 @@
                 </div>
             </div>
 
-            <!-- ======================= Cards ================== -->
-            <div class="cardBox">
-                <div class="card">
-                    <div>
-                        <div class="numbers">857792</div>
-                        <div class="cardName">Account Number</div>
+            <!-- ======================= User Details ================== -->
+            <div id="Div1">
+                <div class="cardBox">
+                    <div class="card">
+                        <div>
+                            <div class="numbers">875654</div>
+                            <div class="cardName">Account No. </div>
+                        </div>
+
+                        <div class="iconBx">
+                            <ion-icon name="person-add-outline"></ion-icon>
+                        </div>
                     </div>
 
-                    <div class="iconBx">
-                        <ion-icon name="person-add-outline"></ion-icon>
-                    </div>
-                </div>
+                    <div class="card">
+                        <div>
+                            <div class="numbers">3456</div>
+                            <div class="cardName">Balance (in Rs) </div>
+                        </div>
 
-                <div class="card">
-                    <div>
-                        <div class="numbers">Rs 1234 /-</div>
-                        <div class="cardName">Balance</div>
-                    </div>
-
-                    <div class="iconBx">
-                        <ion-icon name="cash-outline"></ion-icon>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div>
-                        <div class="numbers">8</div>
-                        <div class="cardName">Transfers</div>
+                        <div class="iconBx">
+                            <ion-icon name="cash-outline"></ion-icon>
+                        </div>
                     </div>
 
-                    <div class="iconBx">
-                        <ion-icon name="swap-horizontal-outline"></ion-icon>
+                    <div class="card">
+                        <div>
+                            <div class="numbers">8</div>
+                            <div class="cardName">Transfers Done</div>
+                        </div>
+
+                        <div class="iconBx">
+                            <ion-icon name="swap-horizontal-outline"></ion-icon>
+                        </div>
                     </div>
-                </div>
-                             
-                <!-- <div class="card">
+
+                    <!-- <div class="card">
                     <div>
                         <div class="numbers">284</div>
                         <div class="cardName">Messages</div>
@@ -122,17 +181,17 @@
                     </div>
                 </div> -->
 
-            </div>
+                </div>
 
-            <!-- ================ Order Details List ================= -->
-            <div class="details">
-                <div class="recentOrders">
-                    <div class="cardHeader">
-                        <h2>Recent Transactions</h2>
-                        <a href="#" class="btn">View All</a>
-                    </div>
+                <!-- ================ Order Details List ================= -->
+                <div class="details">
+                    <div class="recentOrders">
+                        <div class="cardHeader">
+                            <h2>Recent Transactions</h2>
+                            <a href="#" class="btn">View All</a>
+                        </div>
 
-                    <!-- <table>
+                        <!-- <table>
                         <thead>
                             <tr>
                                 <td>Name</td>
@@ -192,23 +251,23 @@
                                 <td><span class="status failed">Failed</span></td>
                             </tr> -->
 
-                            <!-- <tr>
+                        <!-- <tr>
                                 <td>Addidas Shoes</td>
                                 <td>$620</td>
                                 <td>Due</td>
                                 <td><span class="status inProgress">In Progress</span></td>
                             </tr> -->
                         </tbody>
-                    </table>
-                </div>
-
-                <!-- ================= New Customers ================ -->
-                <div class="recentCustomers">
-                    <div class="cardHeader">
-                        <h2>Account Details</h2>
+                        </table>
                     </div>
 
-                    <!-- <table>
+                    <!-- ================= New Customers ================ -->
+                    <div class="recentCustomers">
+                        <div class="cardHeader">
+                            <h2>Account Details</h2>
+                        </div>
+
+                        <!-- <table>
                         <tr>
                             <td width="60px">
                                 <div class="imgBx"><img src="/images/bankwiz_login.png" alt=""></div>
@@ -280,12 +339,69 @@
                             </td>
                         </tr>
                     </table> -->
+                    </div>
                 </div>
             </div>
+            <!-- ======================= Transaction history ================== -->
+            <div id="Div2" style="display: none;">
+                <!-- <h1>helloooooooooooooooooooooo here is your transaction history</h1> -->
+                
+            </div>
+            <!-- ======================= Deposit ================== -->
+            <div id="Div3" style="display: none;">
+                <!-- <h1>helloooooooooooooooooooooo here is your transaction history</h1> -->
+                <div class="cardform">
+                    <div class="card">
+                        <h2>How much Amount do you want to deposit?</h2>
+                        <form action="">
+                            <label for="amount"> Amount:</label>
+                            <input type="number" name="deposit" id="deposit">
+                            <label for="amount"> Account number:</label>
+                            <input type="number" name="account" id="account">
+                            <input type="submit" value="submit">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- ======================= withdrawal ================== -->
+            <div id="Div4" style="display: none;">
+                <!-- <h1>helloooooooooooooooooooooo here is your transaction history</h1> -->
+                <div class="cardform">
+                    <div class="card">
+                        <h2>How much Amount do you want to Withdraw?</h2>
+                        <form action="/api/account/withdraw" method="POST">
+                            <label for="amount"> Amount</label>
+                            <input type="number" name="amount" id="withdraw">
+                            <label for="amount"> Account number:</label>
+                            <input type="number" name="accountNumber" id="account" value={{accountNumber}}>
+                            <input type="submit" value="submit">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- ======================= transfer ================== -->
+            <div id="Div5" style="display: none;">
+                <!-- <h1>helloooooooooooooooooooooo here is your transaction history</h1> -->
+                <div class="cardform">
+                    <div class="card">
+                        <h2>Transfer</h2>
+                        <form action="">
+                            <label for="amount">Amount:</label>
+                            <input type="number" name="amount" id="amount">
+                            <label for="amount">Reciver's Account number:</label>
+                            <input type="number" name="account" id="account">
+                            <input type="submit" value="submit">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- ======================= log out ================== -->
+
         </div>
     </div>
-    <script src="admin.js"></script>
+    <script src="user.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
