Added Starting Files of Loan Phase

--- a/templates/views/user.hbs
+++ b/templates/views/user.hbs
@@ -359,7 +359,7 @@
                             <label for="amount"> Account number:</label>
                             <input type="number" name="account" id="account">
                             {{!-- <input type="submit" value="submit"> --}}
-                            <button onclick="send()">pressu me</button>
+                            <button onclick="send()">Submit</button>
                         </p>
                     </div>
                 </div>
@@ -375,7 +375,7 @@
                             <input type="number" name="amount" id="withdraw">
                             <label for="amount"> Account number:</label>
                             <input type="number" name="accountNumber" id="account1" value={{accountNumber}}>
-                             <button onclick="withdrawl()">pressu me</button>
+                            <button onclick="withdrawl()">Submit</button>
                         </p>
                     </div>
                 </div>
@@ -391,7 +391,8 @@
                             <input type="number" name="amount" id="amount">
                             <label for="amount">Reciver's Account number:</label>
                             <input type="number" name="account" id="account">
-                            <input type="submit" value="submit">
+                            {{!-- <input type="submit" value="submit"> --}}
+                            <button onclick="withdrawl()">Submit</button>
                         </form>
                     </div>
                 </div>
