Updated schema of database and many other things

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -59,6 +59,16 @@ form{
     padding: 0 10px;
 }
 
+p{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 35%;
+        min-width: 238px;
+        padding: 0 10px;
+}
+
 form.sign-in-form {
     opacity: 1;
     transition: 0.5s ease-in-out;
