--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -89,9 +89,8 @@
             <img src="/images/Project_44-02.jpg" alt="">
           </div>
           <div class="infos">
-            <span class="name">Nike SuperRep Go</span>
-            <span class="lorem">Lorem ipsum dolor sit amet, sit amet adipiscing elit. Aenean vel ansd . Nullam
-              lorem. Nulla eu
+            <span class="name">Deposit Facility</span>
+            <span class="lorem">We are committed to serve our customers and provide them unique user experience and one such feature is to deposit money. 
               sodales</span>
           </div>
           <!-- <a href="/contact" class="btn-contact">details</a> -->
@@ -105,7 +104,7 @@
             <img src="/images/bankwiz2.png" alt="">
           </div>
           <div class="infos">
-            <span class="name">Free Run Flyknit</span>
+            <span class="name">Withdrawal Facility</span>
             <span class="lorem">Lorem ipsum dolor sit, adipiscing elit. Aenean vel sit ansd . Nullam
               lorem. Nulla eu
               sodales karma stellus</span>
