--- a/public/css/user.css
+++ b/public/css/user.css
@@ -436,7 +436,7 @@ border-radius: 4px;
 box-sizing: border-box;
 }
 
-input[type=submit] {
+button {
 width: 100%;
 background-color: #7aff7e;
 color: #271561;
