--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -24,7 +24,7 @@
                 </div>
                 <button class="btn" onclick=(my_fun())>Login</button>
             </form>
-            <button class="btn" onclick=(my_fun())>gogo</button>
+            {{!-- <button class="btn" onclick=(my_fun())>gogo</button> --}}
             <form action ="/register" method = "POST" class="sign-up-form">
                 <h2 class="title">Sign up</h2>
                 <div class="input-field">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="input-field">
                     <i class="fas fa-user"></i>
-                    <input type="tel" name="contact" placeholder="8888888888" pattern="[0-9]{9}" maxlength="12"  title="Ten digits code" required/>    
+                    <input type="number" name="contact" placeholder="8888888888" pattern="[0-9]{9}" maxlength="12"  title="Ten digits code" required/>    
                     <label style="font-size:9px;padding-left:20px"></label> 
                 </div>
                 <div class="input-field">
