--- a/public/css/user.css
+++ b/public/css/user.css
@@ -436,6 +436,16 @@ border-radius: 4px;
 box-sizing: border-box;
 }
 
+input[type=string], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  }
+
 button {
 width: 100%;
 background-color: #7aff7e;
